fix: match download icon-text gap with upload

--- a/web/assets/css/transmission-app.scss
+++ b/web/assets/css/transmission-app.scss
@@ -385,10 +385,13 @@ a {
   }
 
   .speed-container {
-    width: 100px;
     display: inherit;
     align-items: inherit;
     flex-direction: inherit;
+
+    &:not(:nth-child(1 of #mainwin-statusbar .speed-container)) {
+      width: 100px;
+    }
   }
 
   #speed-up-icon,
